--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -35,7 +35,7 @@ data:
         method "kubernetes" {
             mount_path = "auth/kubernetes"
             config = {
-                role = "example"
+                role = "agent-role"
             }
         }
 
