--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -88,7 +88,7 @@ spec:
         - name: VAULT_CACERT
           value: /etc/vault/tls/ca.crt
         - name: VAULT_ROLE
-          value: myapp-role
+          value: agent-role
         image: vault
         name: vault-agent-auth
         volumeMounts:
