--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -28,7 +28,7 @@ data:
     \ </html>  \n  EOH\n}\n"
   vault-agent-config.hcl: |
     # Uncomment this to have Agent run once (e.g. when running as an initContainer)
-    exit_after_auth = true
+    # exit_after_auth = true
     pid_file = "/home/vault/pidfile"
 
     auto_auth {
