--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -13,7 +13,7 @@ data:
 
     auto_auth {
         method "kubernetes" {
-            mount_path = "auth/my-kube"
+            mount_path = "auth/kubernetes"
             config = {
                 role = "agent-role"
             }
