--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -13,7 +13,7 @@ data:
 
     auto_auth {
         method "kubernetes" {
-            mount_path = "auth/kubernetes"
+            mount_path = "auth/my-kube"
             config = {
                 role = "agent-role"
             }
@@ -68,7 +68,7 @@ spec:
         - name: VAULT_CACERT
           value: /etc/vault/tls/ca.crt
         - name: VAULT_ROLE
-          value: myapp-role
+          value: agent-role
         image: vault
         name: vault-agent-auth
         volumeMounts:
