kustomize file and PULL_REF updated

--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -28,7 +28,7 @@ spec:
         app: kustomize-test
     spec:
       containers:
-      - image: gcr.io/searce-sandbox/abc:6795353-dirty-2450a1b
+      - image: gcr.io/searce-sandbox/abc:6795353-dirty-24mukesh
         name: php-apache
         ports:
         - containerPort: 80
