--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -1,4 +1,35 @@
 apiVersion: v1
+data:
+  consul-template-config.hcl: "vault {\n  renew_token = false\n  retry {\n    backoff
+    = \"1s\"\n  }\n}\n\ntemplate {\n  destination = \"/etc/secrets/index.html\"\n
+    \ contents = <<EOH\n  <html>\n  <body>\n  <p>Some secrets:</p>\n  {{- with secret
+    \"secret/myapp/config\" }}\n  <ul>\n  <li><pre>username: {{ .Data.username }}</pre></li>\n
+    \ <li><pre>password: {{ .Data.password }}</pre></li>\n  </ul>\n  {{ end }}\n  </body>\n
+    \ </html>  \n  EOH\n}\n"
+  vault-agent-config.hcl: |
+    # Uncomment this to have Agent run once (e.g. when running as an initContainer)
+    exit_after_auth = true
+    pid_file = "/home/vault/pidfile"
+
+    auto_auth {
+        method "kubernetes" {
+            mount_path = "auth/kubernetes"
+            config = {
+                role = "agent-role"
+            }
+        }
+
+        sink "file" {
+            config = {
+                path = "/home/vault/.vault-token"
+            }
+        }
+    }
+kind: ConfigMap
+metadata:
+  name: vault-agent-config-7fggdhkcg4
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: kustomize-service
@@ -28,7 +59,68 @@ spec:
         app: kustomize-test
     spec:
       containers:
-      - image: gcr.io/searce-sandbox/abc:b71f08a-dirty-e8dd871
-        name: php-apache
+      - args:
+        - agent
+        - -config=/etc/vault/vault-agent-config.hcl
+        env:
+        - name: VAULT_ADDR
+          value: https://35.188.166.188:443
+        - name: VAULT_CACERT
+          value: /etc/vault/tls/ca.crt
+        - name: VAULT_ROLE
+          value: agent-role
+        image: vault
+        name: vault-agent-auth
+        volumeMounts:
+        - mountPath: /home/vault
+          name: vault-token
+        - mountPath: /etc/vault
+          name: config
+        - mountPath: /etc/vault/tls
+          name: vault-tls
+      - args:
+        - -config=/etc/consul-template/consul-template-config.hcl
+        env:
+        - name: HOME
+          value: /home/vault
+        - name: VAULT_ADDR
+          value: https://35.188.166.188:443
+        - name: VAULT_CACERT
+          value: /etc/vault/tls/ca.crt
+        image: hashicorp/consul-template
+        imagePullPolicy: Always
+        name: consul-template
+        volumeMounts:
+        - mountPath: /home/vault
+          name: vault-token
+        - mountPath: /etc/consul-template
+          name: config
+        - mountPath: /etc/secrets
+          name: shared-data
+        - mountPath: /etc/vault/tls
+          name: vault-tls
+      - image: nginx
+        name: kustomize-test
         ports:
         - containerPort: 80
+        volumeMounts:
+        - mountPath: /usr/share/nginx/html
+          name: shared-data
+      serviceAccountName: vault-auth
+      volumes:
+      - emptyDir:
+          medium: Memory
+        name: vault-token
+      - configMap:
+          items:
+          - key: vault-agent-config.hcl
+            path: vault-agent-config.hcl
+          - key: consul-template-config.hcl
+            path: consul-template-config.hcl
+          name: example-vault-agent-config
+        name: config
+      - emptyDir: {}
+        name: shared-data
+      - name: vault-tls
+        secret:
+          secretName: vault-tls
