--- a/overlays/production/kustomization.yaml
+++ b/overlays/production/kustomization.yaml
@@ -117,7 +117,7 @@ spec:
             path: vault-agent-config.hcl
           - key: consul-template-config.hcl
             path: consul-template-config.hcl
-          name: vault-agent-config
+          name: vault-agent-config-7fggdhkcg4
         name: config
       - emptyDir: {}
         name: shared-data
